<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/button_night_mode"
        style="@style/ColoredTextStyle.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button_night_mode" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/button_language"
        style="@style/ColoredTextStyle.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button_language" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/button_animation"
        style="@style/ColoredTextStyle.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button_animation" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/button_custom_view"
        style="@style/ColoredTextStyle.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button_custom_view" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/button_insets"
        style="@style/ColoredTextStyle.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button_insets" />
</LinearLayout>